[metadata]
name = jashin
version = attr: jashin.__version__

url = https://github.com/atsuoishimoto/jashin
author = Atsuo Ishimoto
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License

project_urls =
    Source = https://github.com/atsuoishimoto/jashin


[options]
python_requires = >=3.7
packages = find:

setup_requires =
    wheel
    setuptools-git

install_requires =
    requests

[options.extras_require]
dev =
    wheel
    twine
    tox
    pytest
    mypy
    black
    flake8
    autoflake
    pre-commit
    sphinx
    sphinx-autodoc-typehints

[options.package_data]
jashin =
  py.typed
